--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../src/components/assets/images/beer-brands.jpg");
+  background-image: url("assets/images/beer-brands.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
