--- a/src/components/BingoGame/index.css
+++ b/src/components/BingoGame/index.css
@@ -1,4 +1,3 @@
-
 .container {
     display: flex;
     position: relative;
@@ -33,3 +32,31 @@
     position: absolute;
     margin-top: 9rem;
 }
+
+
+
+@media only screen and (max-width: 1550px) {
+    .container {
+        padding: 3rem 10rem 0;
+    }
+}
+
+@media only screen and (max-width: 1300px) {
+    .container {
+        padding: 2rem 6rem 0;
+    }
+}
+
+@media only screen and (max-width: 1150px) {
+    .container {
+        padding: 1rem 1rem 0;
+    }
+}
+
+
+@media only screen and (max-width: 500px) {
+    .container {
+        padding: 0.5rem 0.5rem 0;
+    }
+}
+
